everypay/templates/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: everypay-ingress
  namespace: everypay
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: everypay.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: everypay-service
            port:
              name: http
